--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     Test Transfer
 
-    <script >
-      let a = document.querySelector("a")
+    <script>
+      let a = document.querySelector("a");
+      let b = 53;
     </script>
   </body>
 </html>
